adding folder name as title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class="title">Unit Tests</h1>
+    <h1 class="title">Loading...</h1>
     <div class="container">
         <div class="buttons">
             <span onclick="expand()" class="button expand">Expand All</span>
