--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Junit Viewer</title>
+    <title>Loading...</title>
     <script src="jquery.min.js"></script>
     <script src="buttons.js"></script>
     <link rel="stylesheet" type="text/css" href="junit_viewer.css">
