adding some simple error stuff

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
 <body>
     <h1 class="title">Loading...</h1>
+    <div class="error">
+        <span>If you are seeing this then try the following</span>
+        <ul>
+            <li>If this is the "Test Data" you forgot your folder</li>
+            <li>Check the console for an error: if error from parsing please raise issue with some stub data or a pull request</li>
+            <li>If the console says ENOENT exception either folder is missing/invalid or in accessible e.g. being used by another program as in unit tests are still running</li>
+            <li>That the folder has xml inside of it</li>
+            <li>That your tests have actually compiled as most reports won't be created if not compiled correctly</li>
+        </ul>
+    </div>
     <div class="container">
         <div class="buttons">
             <span onclick="expand()" class="button expand">Expand All</span>
