Show more detail for test times

--- a/template.html
+++ b/template.html
@@ -199,7 +199,7 @@
                 )
                 .append(
                     Span()
-                    .html('Time: ' + parseInt(testCase.time).toFixed(2))
+                    .html('Time: ' + parseFloat(testCase.time).toFixed(2))
                     .addClass('test__time')
                 )
                 .addClass('test')
