--- a/template.html
+++ b/template.html
@@ -238,9 +238,23 @@
                                 .html('Failures: ' + data.failures)
                                 .addClass('suite__data')
                         ).addClass('suite')
+                        .on('click', function () {
+                            var self = $(this).parent();
+                            self
+                                .children('.tests')
+                                .slideToggle(500);
+
+                            if (self.hasClass("suite--contracted")) {
+                                self.removeClass("suite--contracted");
+                                self.addClass("suite--expanded");
+                            } else {
+                                self.addClass("suite--contracted");
+                                self.removeClass("suite--expanded");
+                            }
+                        })
                     ).addClass("suite--contracted")
-                        .append()
-                        .appendTo($('#results'));
+                    .append()
+                    .appendTo($('#results'));
 
                 if (data.failures === 0) {
                     suite.addClass('suite--pass');
@@ -297,22 +311,7 @@
                         .hide()
                         .append(test);
                 });
-                suite
-                    .append(tests)
-                    .on('click', function () {
-                        var self = $(this);
-                        self
-                            .children('.tests')
-                            .slideToggle(500);
-
-                        if (self.hasClass("suite--contracted")) {
-                            self.removeClass("suite--contracted");
-                            self.addClass("suite--expanded");
-                        } else {
-                            self.addClass("suite--contracted");
-                            self.removeClass("suite--expanded");
-                        }
-                    });
+                suite.append(tests);
                 index += 1;
             }
         }
