--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Loading...</title>
+    <meta charset="UTF-8">
     <!-- jquery -->
     <script type="text/javascript">
         /*! jQuery v2.1.4 | (c) 2005, 2015 jQuery Foundation, Inc. | jquery.org/license */
