--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Loading...</title>
+    <meta charset="UTF-8">
     <script src="jquery.min.js"></script>
     <script src="buttons.js"></script>
     <link rel="stylesheet" type="text/css" href="junit_viewer.css">
