copied the change from the parser

--- a/template.html
+++ b/template.html
@@ -214,7 +214,7 @@
                     Br()
                 ).append(
                     Span()
-                    .html(testCase.failureMessage)
+                    .html(testCase.failureMessage.replace(/(?:\r\n|\r|\n)/g, '<br />'))
                     .addClass('test__fail')
                 )
                 .addClass('test--fail')
