adding a sample index.html and mustache and jest

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         </div>
     </div>
     <script type="text/javascript">
-    // console.log("Test results in console using chrome table?")
+    console.table([1, 1])
     function toggle(element) {
         for (var child = 1; child < element.children.length; child++)
             element.children[child].style.display = element.children[child].style.display === 'none' ? 'block' : 'none'
