renders string to dom to make it easier to test

--- a/template.html
+++ b/template.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>{{title}}</title>
 </head>
+
 <body>
+    <br />
+    <h1 class="u-full-width">{{title}}</h1>
+    <br />
 </body>
+
 </html>
