added the title

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
 
 <body>
     <br />
-    <h1 class="u-full-width">{{title}}</h1>
+    <h1 id="title" class="u-full-width">{{title}}</h1>
     <br />
 </body>
 
