updating index.html to add some demos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Junit Viewer</title>
     <link rel="stylesheet" type="text/css" href="./templates/skeleton.css">
+    <style type="text/css">
+    /*h1, h2 {
+            text-align: center;
+        }*/
+    </style>
 </head>
+
 <body>
-    <h2>Demo Views</h2>
-    <ul>
-        <li><a href="./valid_data.html">Valid Data</a></li>
-        <li><a href="./single_file.html">Single File</a></li>
-        <li><a href="./no_file.html">No File</a></li>
-    </ul>
+    <h1 class="offset-by-one ten columns">Junit Viewer</h1>
+    <div class="row offset-by-two ten columns">
+        <p>Junit Viewer is a very simple yet powerful way of viewing your xunit results, you can either start a port and when you run your tests all you have to do is refresh your browser, or you can save the results to a file which can be easily viewed in many testing tools such as Team City and Hudson/Jenkins</p>
+        <h2>Install It</h2>
+        <code>
+            npm install -g junit_viewer
+        </code>
+        <h2><br />Run It</h2>
+        <code>
+            junit_viewer --results=folder_or_file_location
+        </code>
+        <p>
+            <br/>You can also run it with the following options
+        </p>
+        <ul>
+            <li><code>--save=file_location_$[date_format].html</code></li>
+            <li><code>--port=port_number</code></li>
+        </ul>
+    </div>
+    <div class="row offset-by-two ten columns">
+        <h2>Demo Views</h2>
+        <ul>
+            <li><a href="./valid_data.html">Valid Data</a></li>
+            <li><a href="./single_file.html">Single File</a></li>
+            <li><a href="./no_file.html">No File</a></li>
+        </ul>
+    </div>
 </body>
+
 </html>
