--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1 class="offset-by-one ten columns">Junit Viewer</h1>
-    <div class="row offset-by-two ten columns">
+    <div class="row offset-by-two nine columns">
         <p>Junit Viewer is a very simple yet powerful way of viewing your xunit results, you can either start a port and when you run your tests all you have to do is refresh your browser, or you can save the results to a file which can be easily viewed in many testing tools such as Team City and Hudson/Jenkins</p>
         <h2>Install It</h2>
         <code>
@@ -31,7 +31,7 @@
             <li><code>--port=port_number</code></li>
         </ul>
     </div>
-    <div class="row offset-by-two ten columns">
+    <div class="row offset-by-two nine columns">
         <h2>Demo Views</h2>
         <ul>
             <li><a href="./valid_data.html">Valid Data</a></li>
