starting on search box and added id to all suites and tests for quick filtering

--- a/single_file.html
+++ b/single_file.html
@@ -1137,7 +1137,7 @@ there.
                 </fieldset>
             </form>
         </div>
-        <div id="suites"><div class="suite">
+        <div id="suites"><div class="suite" id="Multi_5MRnr">
     <button class="suite_name suite--failure">Multi</button>
     <div>
     <button>Properties</button>
@@ -1166,7 +1166,7 @@ there.
 </div>
 
     
-    <div class="tests"><div class="test">
+    <div class="tests"><div class="test" id="Is_an_error_FCXWW">
     <button class="test_name test--error">
         <span class="test_name">Is an error</span>
         <span class="test_time">0.00075</span>
@@ -1174,7 +1174,7 @@ there.
     <div class="test_message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test">
+<div class="test" id="It_is_failure_x2pAj">
     <button class="test_name test--failure">
         <span class="test_name">It is failure</span>
         <span class="test_time">0.012011200000000001</span>
@@ -1182,7 +1182,7 @@ there.
     <div class="test_message">FILENAME:XX<br />Expected<br />    &lt;string&gt;: Luke<br />to equal<br />    &lt;string&gt;: luke</div>
 </div>
 
-<div class="test">
+<div class="test" id="It_is_pass_NQBuK">
     <button class="test_name test--passed">
         <span class="test_name">It is pass</span>
         <span class="test_time">0.000625</span>
@@ -1190,7 +1190,7 @@ there.
     <div class="test_message"></div>
 </div>
 
-<div class="test">
+<div class="test" id="It_is_skipped_MHhw3">
     <button class="test_name test--skipped">
         <span class="test_name">It is skipped</span>
         <span class="test_time">0</span>
@@ -1201,7 +1201,7 @@ there.
 </div>
 </div>
     </div>
-    <script type="text/javascript"></script>
+    <script type="text/javascript">var testData = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_FCXWW"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_x2pAj"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_NQBuK"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_MHhw3"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_5MRnr"}}</script>
 </body>
 
 </html>
