--- a/no_file.html
+++ b/no_file.html
@@ -1,3 +1,38 @@
-<div>
-    There is no such file: <b>&#x2F;Users&#x2F;prestl02&#x2F;Projects&#x2F;junit_viewer&#x2F;__tests__&#x2F;dat FILE DOES NOT EXIST NOT GOING TO RUN</b>
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>no such file</title>
+    <style type="text/css">
+    h1,
+    p {
+        width: 100%;
+        text-align: center;
+    }
+
+    h1 {
+        color: #FF1717;
+    }
+    
+    p {
+        line-height: 32px;
+        font-size: 18px;
+    }
+
+    b {
+        font-size: 24px;
+    }
+    </style>
+</head>
+
+<body>
+    <h1>No Such File</h1>
+    <p>
+        awwwwwwwwww SNAP!
+        <br/>
+        <b>&#x2F;Users&#x2F;prestl02&#x2F;Projects&#x2F;junit_viewer&#x2F;__tests__&#x2F;dat</b>
+        <br/>
+    </p>
+</body>
+
+</html>
