--- a/single_file.html
+++ b/single_file.html
@@ -1237,7 +1237,7 @@ there.
             <input type="text" class="eight columns" oninput="search(this.value)"></input>
         </div>
     </div>
-    <div id="suites" class="row offset-by-one ten columns"><div class="suite" id="Multi_8DfUJ">
+    <div id="suites" class="row offset-by-one ten columns"><div class="suite" id="Multi_w1ZuT">
     <button class="suite_name suite--failure u-full-width">Multi</button>
     <div class="suite__contents">
         <div class="properties">
@@ -1270,7 +1270,7 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_an_error_IFnzY">
+        <div class="tests"><div class="test" id="Is_an_error_NEPp3">
     <button class="test_name test--error u-full-width">
         <span class="test_name u-pull-left">Is an error</span>
         <span class="test_time u-pull-right">0.00075</span>
@@ -1278,7 +1278,7 @@ there.
     <div class="test_message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_is_failure_oyiV9">
+<div class="test" id="It_is_failure_ZvX0j">
     <button class="test_name test--failure u-full-width">
         <span class="test_name u-pull-left">It is failure</span>
         <span class="test_time u-pull-right">0.012011200000000001</span>
@@ -1286,7 +1286,7 @@ there.
     <div class="test_message">FILENAME:XX<br />Expected<br />    &lt;string&gt;: Luke<br />to equal<br />    &lt;string&gt;: luke</div>
 </div>
 
-<div class="test" id="It_is_pass_3fthq">
+<div class="test" id="It_is_pass_NiOow">
     <button class="test_name test--passed u-full-width">
         <span class="test_name u-pull-left">It is pass</span>
         <span class="test_time u-pull-right">0.000625</span>
@@ -1294,7 +1294,7 @@ there.
     <div class="test_message"></div>
 </div>
 
-<div class="test" id="It_is_skipped_AH0O6">
+<div class="test" id="It_is_skipped_GdG5y">
     <button class="test_name test--skipped u-full-width">
         <span class="test_name u-pull-left">It is skipped</span>
         <span class="test_time u-pull-right">0</span>
@@ -1305,7 +1305,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_IFnzY"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_oyiV9"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_3fthq"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_AH0O6"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_8DfUJ"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_NEPp3"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_ZvX0j"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_NiOow"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_GdG5y"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_w1ZuT"}}
 
 var names = Object.keys(suites).map(function(key) {
     var tests = suites[key].tests.map(function(test) {
