--- a/single_file.html
+++ b/single_file.html
@@ -1277,23 +1277,50 @@ there.
     <h1 class="u-full-width">Multi Suite</h1>
     <div class="row offset-by-one ten columns"><div>
     <button class="button-primary u-full-width" onclick="contract(this.parentElement)">ADVANCED SEARCH</button>
-    <!-- <div class="options" style="display: none"> -->
-    <div class="options">
+    <div class="options" style="display: none">
         <div class="option">
             <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">SUITES</button>
-            <div class="options__cta">
+            <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
                     <input type="text" class="options_search__input"></input>
                 </div>
                 <div class="options__buttons">
-                    <button>SEARCH</button>
+                    <button class="one-half column button-primary">HIDE PASSING</button>
+                    <button class="one-half column button-primary">CONTRACT</button>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">TESTS</button>
+            <div class="options__cta row">
+                <div class="u-full-width">
+                    <button disabled class="options_search__name">SEARCH</button>
+                    <input type="text" class="options_search__input"></input>
+                </div>
+                <div class="options__buttons">
+                    <button class="one-third column button-primary">HIDE PASSING</button>
+                    <button class="one-third column button-primary">HIDE ALL</button>
+                    <button class="one-third column button-primary">CONTRACT</button>
+                </div>
+            </div>
+        </div>
+        <div class="option">
+            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">PROPERTIES</button>
+            <div class="options__cta row">
+                <div class="u-full-width">
+                    <button disabled class="options_search__name">SEARCH</button>
+                    <input type="text" class="options_search__input"></input>
+                </div>
+                <div class="options__buttons">
+                    <button class="one-half column button-primary">HIDE PROPERTIES</button>
+                    <button class="one-half column button-primary">CONTRACT</button>
                 </div>
             </div>
         </div>
     </div>
 </div></div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_sgVNE">
+    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_deaGU">
     <button class="suite__name suite--failure u-full-width" onclick="contract(this.parentElement)">Multi</button>
     <div class="suite__contents">
         <div class="properties">
@@ -1326,7 +1353,7 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_an_error_IRlGo">
+        <div class="tests"><div class="test" id="Is_an_error_mkxLs">
     <button class="test__name test--error u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">Is an error</span>
         <span class="u-pull-right">0.00075</span>
@@ -1334,7 +1361,7 @@ there.
     <div class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_is_failure_hcMiu">
+<div class="test" id="It_is_failure_sMh3X">
     <button class="test__name test--failure u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
@@ -1342,7 +1369,7 @@ there.
     <div class="test__message">FILENAME:XX<br />Expected<br />    &lt;string&gt;: Luke<br />to equal<br />    &lt;string&gt;: luke</div>
 </div>
 
-<div class="test" id="It_is_pass_ePX2p">
+<div class="test" id="It_is_pass_qzgih">
     <button class="test__name test--passed u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1350,7 +1377,7 @@ there.
     
 </div>
 
-<div class="test" id="It_is_skipped_rQ1sC">
+<div class="test" id="It_is_skipped_zxk8n">
     <button class="test__name test--skipped u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is skipped</span>
         <span class="u-pull-right">0</span>
@@ -1361,7 +1388,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_IRlGo"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_hcMiu"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_ePX2p"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_rQ1sC"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_sgVNE"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_mkxLs"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_sMh3X"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_qzgih"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_zxk8n"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_deaGU"}}
 
 function contract(element) {
     if (element.children[1]) {
