--- a/single_file.html
+++ b/single_file.html
@@ -1270,6 +1270,19 @@ there.
         border-radius: 0 4px 4px 0 !important;
     }
 
+    .flat {
+        border-radius: 4px 4px 0 0;
+    }
+
+    .round {
+        border-radius: 4px;
+    }
+
+    .hide--clicking,
+    .hide--searching {
+        display: none;
+    }
+
     </style>
 </head>
 
@@ -1277,50 +1290,51 @@ there.
     <h1 class="u-full-width">Multi Suite</h1>
     <div class="row offset-by-one ten columns"><div>
     <button class="button-primary u-full-width" onclick="contract(this.parentElement)">ADVANCED SEARCH</button>
-    <div class="options" style="display: none">
+    <div class="options hide--clicking">
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">SUITES</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">SUITES</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.suites(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-half column button-primary">HIDE PASSING</button>
-                    <button class="one-half column button-primary">CONTRACT</button>
+                    <button class="one-half column button-primary" onclick="cta.hide.passing.suites(this)">HIDE PASSING</button>
+                    <button class="one-half column button-primary" onclick="cta.contract.suites(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">TESTS</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">TESTS</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.tests(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-third column button-primary">HIDE PASSING</button>
-                    <button class="one-third column button-primary">HIDE ALL</button>
-                    <button class="one-third column button-primary">CONTRACT</button>
+                    <button class="one-third column button-primary" onclick="cta.hide.passing.tests(this)">HIDE PASSING</button>
+                    <button class="one-third column button-primary" onclick="cta.hide.tests(this)">HIDE ALL</button>
+                    <button class="one-third column button-primary" onclick="cta.contract.tests(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
         <div class="option">
-            <button class="button-primary u-full-width option__name" style="border-radius: 4px 4px 0 0" onclick="contract(this.parentElement)">PROPERTIES</button>
+            <button class="button-primary u-full-width option__name flat" onclick="contract(this.parentElement)">PROPERTIES</button>
             <div class="options__cta row">
                 <div class="u-full-width">
                     <button disabled class="options_search__name">SEARCH</button>
-                    <input type="text" class="options_search__input"></input>
+                    <input type="text" class="options_search__input" oninput="cta.search.properties(this.value)"></input>
                 </div>
                 <div class="options__buttons">
-                    <button class="one-half column button-primary">HIDE PROPERTIES</button>
-                    <button class="one-half column button-primary">CONTRACT</button>
+                    <button class="one-half column button-primary" onclick="cta.hide.properties(this)">HIDE PROPERTIES</button>
+                    <button class="one-half column button-primary" onclick="cta.contract.properties(this)">CONTRACT</button>
                 </div>
             </div>
         </div>
     </div>
-</div></div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_deaGU">
+</div>
+</div>
+    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_1VJOp">
     <button class="suite__name suite--failure u-full-width" onclick="contract(this.parentElement)">Multi</button>
     <div class="suite__contents">
         <div class="properties">
@@ -1353,7 +1367,7 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_an_error_mkxLs">
+        <div class="tests"><div class="test" id="Is_an_error_FdUZJ">
     <button class="test__name test--error u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">Is an error</span>
         <span class="u-pull-right">0.00075</span>
@@ -1361,7 +1375,7 @@ there.
     <div class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_is_failure_sMh3X">
+<div class="test" id="It_is_failure_XZD1m">
     <button class="test__name test--failure u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
@@ -1369,7 +1383,7 @@ there.
     <div class="test__message">FILENAME:XX<br />Expected<br />    &lt;string&gt;: Luke<br />to equal<br />    &lt;string&gt;: luke</div>
 </div>
 
-<div class="test" id="It_is_pass_qzgih">
+<div class="test" id="It_is_pass_6XJCM">
     <button class="test__name test--passed u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is pass</span>
         <span class="u-pull-right">0.000625</span>
@@ -1377,7 +1391,7 @@ there.
     
 </div>
 
-<div class="test" id="It_is_skipped_zxk8n">
+<div class="test" id="It_is_skipped_WWuH0">
     <button class="test__name test--skipped u-full-width" onclick="contract(this.parentElement)">
         <span class="u-pull-left">It is skipped</span>
         <span class="u-pull-right">0</span>
@@ -1388,14 +1402,39 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_mkxLs"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_sMh3X"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_qzgih"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_zxk8n"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_deaGU"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_FdUZJ"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_XZD1m"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_6XJCM"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_WWuH0"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_1VJOp"}}
+
+function createToggleDisplay(by) {
+    return function(element) {
+        var isHidden = element.className.indexOf(' hide--' + by) !== -1
+        if (isHidden)
+            element.className = element.className.replace(' hide--' + by, '')
+        else
+            element.className = element.className + ' hide--' + by
+        return !isHidden
+    }
+}
+
+function toggleCorners(element, isHidden) {
+    if (isHidden) {
+        element.className = element.className.replace(' flat', '')
+        element.className = element.className + ' round'
+    } else {
+        element.className = element.className.replace(' round', '')
+        element.className = element.className + ' flat'
+    }
+}
+
+var toggleBy = {
+    searching: createToggleDisplay('searching'),
+    clicking: createToggleDisplay('clicking')
+}
 
 function contract(element) {
     if (element.children[1]) {
-        var shownAs = element.children[1].tBodies !== undefined ? 'table' : 'block'
-        var display = element.children[1].style.display
-        element.children[1].style.display = display !== 'none' ? 'none' : shownAs
-        element.children[0].style['border-radius'] = display !== 'none' ? '4px' : '4px 4px 0 0'
+        var isHidden = toggleBy.clicking(element.children[1])
+        toggleCorners(element.children[0], isHidden)
+        // element.children[0].style['border-radius'] = !isHidden ? '4px' : '4px 4px 0 0'
     }
 }
 
@@ -1413,35 +1452,48 @@ function forEachTest(callback) {
     })
 }
 
-function hideSuites(element) {
-    var shown = element.innerHTML.indexOf('HIDE') !== -1
-    element.innerHTML = (shown ? 'SHOW' : 'HIDE') + ' PASSING SUITES'
+var cta = {
+    hide: {
+        passing: {
+            suites: function(element) {
+                console.log(element)
+            },
+            tests: function(element) {
+                console.log(element)
+            }
+        },
+        tests: function(element) {
+            console.log(element)
+        },
+        properties: function(element) {
+            console.log(element)
+        }
+    },
 
-    forEachSuite(function(suite) {
-        if (suite.type === 'passed')
-            document.getElementById(suite.id).style.display = shown ? 'none' : 'block'
-    })
+    contract: {
+        suites: function(element) {
+            console.log(element)
+        },
+        tests: function(element) {
+            console.log(element)
+        },
+        properties: function(element) {
+            console.log(element)
+        }
+    },
+    search: {
+        suites: function(value) {
+            console.log(value)
+        },
+        tests: function(value) {
+            console.log(value)
+        },
+        properties: function(value) {
+            console.log(value)
+        }
+    }
 }
-
-function hideTests(element) {
-    var shown = element.innerHTML.indexOf('HIDE') !== -1
-    element.innerHTML = (shown ? 'SHOW' : 'HIDE') + ' PASSING TESTS'
-
-    forEachTest(function(test) {
-        if (test.type === 'passed' || test.type === 'skipped')
-            document.getElementById(test.id).style.display = shown ? 'none' : 'block'
-    })
-}
-
-function contractSuites(element) {
-    var contracted = element.innerHTML.indexOf('CONTRACT') !== -1
-    element.innerHTML = (contracted ? 'EXPAND' : 'CONTRACT') + ' PASSING SUITES'
-
-    forEachSuite(function(suite) {
-        if (suite.type === 'passed')
-            document.getElementById(suite.id).style.display = contracted ? 'none' : 'block'
-    })
-}</script>
+</script>
 </body>
 
 </html>
