--- a/single_file.html
+++ b/single_file.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Multi Suite</title>
+    <title>multi_suite.xml</title>
     <style type="text/css">
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
@@ -1287,7 +1287,7 @@ there.
 </head>
 
 <body>
-    <h1 class="u-full-width">Multi Suite</h1>
+    <h1 class="u-full-width">multi_suite.xml</h1>
     <div class="row offset-by-one ten columns"><div>
     <button class="button-primary u-full-width" onclick="contract(this.parentElement)">ADVANCED SEARCH</button>
     <div class="options hide--clicking">
@@ -1334,7 +1334,7 @@ there.
     </div>
 </div>
 </div>
-    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_1VJOp">
+    <div class="row offset-by-one ten columns"><div class="suite" id="Multi_uhP8o">
     <button class="suite__name suite--failure u-full-width" onclick="contract(this.parentElement)">Multi</button>
     <div class="suite__contents">
         <div class="properties">
@@ -1367,33 +1367,33 @@ there.
     </table>
 </div>
 
-        <div class="tests"><div class="test" id="Is_an_error_FdUZJ">
+        <div class="tests"><div class="test" id="Is_An_Error_ob5tq">
     <button class="test__name test--error u-full-width" onclick="contract(this.parentElement)">
-        <span class="u-pull-left">Is an error</span>
+        <span class="u-pull-left">Is An Error</span>
         <span class="u-pull-right">0.00075</span>
     </button>
     <div class="test__message">java.lang.RuntimeException: There was an error</div>
 </div>
 
-<div class="test" id="It_is_failure_XZD1m">
+<div class="test" id="It_Is_A_Failure_Ns0C2">
     <button class="test__name test--failure u-full-width" onclick="contract(this.parentElement)">
-        <span class="u-pull-left">It is failure</span>
+        <span class="u-pull-left">It Is A Failure</span>
         <span class="u-pull-right">0.012011200000000001</span>
     </button>
-    <div class="test__message">FILENAME:XX<br />Expected<br />    &lt;string&gt;: Luke<br />to equal<br />    &lt;string&gt;: luke</div>
+    <div class="test__message">FILENAME:XX<br />Expected<br />    <string>: Luke<br />to equal<br />    <string>: luke</div>
 </div>
 
-<div class="test" id="It_is_pass_6XJCM">
+<div class="test" id="It_Is_A_Pass_lOFMf">
     <button class="test__name test--passed u-full-width" onclick="contract(this.parentElement)">
-        <span class="u-pull-left">It is pass</span>
+        <span class="u-pull-left">It Is A Pass</span>
         <span class="u-pull-right">0.000625</span>
     </button>
     
 </div>
 
-<div class="test" id="It_is_skipped_WWuH0">
+<div class="test" id="It_Is_Skipped_PTsa0">
     <button class="test__name test--skipped u-full-width" onclick="contract(this.parentElement)">
-        <span class="u-pull-left">It is skipped</span>
+        <span class="u-pull-left">It Is Skipped</span>
         <span class="u-pull-right">0</span>
     </button>
     
@@ -1402,7 +1402,7 @@ there.
     </div>
 </div>
 </div>
-    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is an error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_an_error_FdUZJ"},{"name":"It is failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_is_failure_XZD1m"},{"name":"It is pass","type":"passed","time":"0.000625","id":"It_is_pass_6XJCM"},{"name":"It is skipped","type":"skipped","time":"0","id":"It_is_skipped_WWuH0"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_1VJOp"}}
+    <script type="text/javascript">var suites = {"Multi":{"name":"Multi","tests":[{"name":"Is An Error","type":"error","message":"java.lang.RuntimeException: There was an error","time":"0.00075","id":"Is_An_Error_ob5tq"},{"name":"It Is A Failure","type":"failure","message":"FILENAME:XX\nExpected\n    <string>: Luke\nto equal\n    <string>: luke","time":"0.012011200000000001","id":"It_Is_A_Failure_Ns0C2"},{"name":"It Is A Pass","type":"passed","time":"0.000625","id":"It_Is_A_Pass_lOFMf"},{"name":"It Is Skipped","type":"skipped","time":"0","id":"It_Is_Skipped_PTsa0"}],"properties":{"flag-type":"bug","flag-content":"APPLICATION DEFECT","Has a name":"true","URL":"/hunter/overall_test.go"},"time":"0.0160106","type":"failure","id":"Multi_uhP8o"}}
 
 function createToggleDisplay(by) {
     return function(element) {
@@ -1434,7 +1434,6 @@ function contract(element) {
     if (element.children[1]) {
         var isHidden = toggleBy.clicking(element.children[1])
         toggleCorners(element.children[0], isHidden)
-        // element.children[0].style['border-radius'] = !isHidden ? '4px' : '4px 4px 0 0'
     }
 }
 
